--- a/style.css
+++ b/style.css
@@ -16,8 +16,12 @@ button{
 #sketchPad{
     padding: 0;
     margin: 0;
+    width: 960px;
+    height: 960px;
     display: flex;
     flex-wrap: wrap;
+    
+    
 
 }
 
@@ -25,9 +29,9 @@ button{
     padding: 0;
     margin: 0;
 
-    width: 64px;
-    height: 64px;
-    background-color: white;
+    opacity: 0;
+    background-color: black;
     border: 1px solid black;
+
 }
 
